# kit

./: '  .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.c  config.cmake.in  gen_cmake.c  gen_cmake.py  gen_inl.c
.github/workflows/: build_and_test.yml  code_coverage.yml
include/: kit.inl.h
source/: CMakeLists.txt
source/kit/: CMakeLists.txt  allocator.c  allocator.h  array_ref.c  array_ref.h  async_function.c  async_function.h  atomic.c  atomic.h  atomic.win32.c  bigint.h  condition_variable.c  condition_variable.h  dynamic_array.c  dynamic_array.h  file.c  file.h  input_buffer.c  input_buffer.h  input_stream.c  input_stream.h  lower_bound.c  lower_bound.h  mersenne_twister_64.c  mersenne_twister_64.h  move_back.c  move_back.h  mutex.h  options.h  secure_random.c  secure_random.h  sha256.c  sha256.h  status.h  string_ref.c  string_ref.h  thread.c  thread.h  thread.posix.c  thread.win32.c  (+8 more)
source/kit/c11/: CMakeLists.txt  threads.h  time.h
source/kit/c11/impl/: CMakeLists.txt  threads_posix.c  threads_win32.c  threads_win32.h  threads_win32_tls_callback.cpp  time.c
source/kit_test/: CMakeLists.txt  bench.c  bench.h  run_tests.c  test.c  test.h
source/test/: CMakeLists.txt
source/test/integration/fetch_content/: CMakeLists.txt
source/test/integration/find_package/: CMakeLists.txt
source/test/integration/find_package/source/: CMakeLists.txt  main.c
source/test/programs/: CMakeLists.txt  cpp.cpp  cpp_example.cpp  signals.c  signals.cpp  too_many_assertions.c  too_many_tests.c
source/test/unittests/: CMakeLists.txt  array_ref.test.c  async_function.test.c  atomic.test.c  bigint.test.c  c11_threads.c  condition_variable.test.c  dynamic_array.test.c  file.test.c  foo.bench.c  input_buffer.test.c  input_stream.test.c  lower_bound.test.c  main.test.c  mersenne_twister_64.test.c  move_back.test.c  mutex.test.c  secure_random.test.c  sha256.test.c  string_ref.test.c  test_duration.test.c  thread.test.c
